Fix some layout issues

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
 
 nav {
     display: flex;
-    padding: 6% 6%;
+    padding: 3% 3%;
     justify-content: space-between;
     align-items: center;
 }
@@ -53,7 +53,8 @@ nav img {
 }
 
 nav a {
-    padding-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
     color: var(--white);
     text-decoration: none;
     font-size: 30px;
@@ -104,11 +105,15 @@ nav a span {
 .text-box {
     width: 90%;
     color: var(--white);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
     text-align: center;
+    top: 50%;
+    /* padding-top: 10vh; */
+}
+
+.text-box div {
+    margin: auto;
+    min-height: 6vh;
 }
 
 .text-box img {
